Javascript and project both complete

--- a/Project One - Age Calculator/index.html
+++ b/Project One - Age Calculator/index.html
@@ -10,12 +10,13 @@
   <body>
     <div id="age-calculator-container">
       <h1>Age Calculator</h1>
-      <form action="#">
+      <div class="birthdate-input">
         <label for="birthdate-input">Enter your date of birth :</label>
         <input type="date" name="user-birthdate" id="birthdate-input" />
-        <button>Calculate Age</button>
-        <p id="calculated-age-result">Your age is 25 years old</p>
+        <button id="button">Calculate Age</button>
+        <p id="calculated-age-result"></p>
       </form>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
